--- a/frontend/src/theme/main.css
+++ b/frontend/src/theme/main.css
@@ -1,2 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap');
 
+/* Webkit scrollbar design */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+::-webkit-scrollbar-track {
+background-color: #e0e0e0;
+}
+
+::-webkit-scrollbar-thumb {
+background-color: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+background-color: #555;
+}
